Add tests, stats and redirect routes
